# finch

./: .buildinfo  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  api.html  custom_config_template.py  debug_config.py  environment.yml  experiment.py  genindex.html  index.html  launch_run.sh  mypy.ini  objects.inv  operators.html  pyproject.toml  quickstart.html  run.py  run_config.py  sbatch.sh  searchindex.js  setup.cfg  setup.py  sitemap.xml  srun.sh  start_scheduler.py  start_scheduler.sh
.doctrees/: api.doctree  environment.pickle  index.doctree  operators.doctree  quickstart.doctree
.doctrees/api/finch/: DaskRunConfig.__eq__.doctree  DaskRunConfig.__init__.doctree  DaskRunConfig.__repr__.doctree  DaskRunConfig.cleanup.doctree  DaskRunConfig.cluster_config.doctree  DaskRunConfig.construct_output.doctree  DaskRunConfig.create_report.doctree  DaskRunConfig.doctree  DaskRunConfig.measure.doctree  DaskRunConfig.setup.doctree  DaskRunConfig.workers.doctree  DaskRuntime.__eq__.doctree  DaskRuntime.__init__.doctree  DaskRuntime.__repr__.doctree  DaskRuntime.doctree  DaskRuntime.graph_construction.doctree  DaskRuntime.optimization.doctree  DaskRuntime.serialization.doctree  DefaultOperator.__call__.doctree  DefaultOperator.__class_getitem__.doctree  DefaultOperator.__subclasshook__.doctree  DefaultOperator.doctree  OperatorRunConfig.__eq__.doctree  OperatorRunConfig.__init__.doctree  OperatorRunConfig.__repr__.doctree  OperatorRunConfig.construct_output.doctree  OperatorRunConfig.doctree  OperatorRunConfig.impl.doctree  OperatorRunConfig.input_obj.doctree  OperatorRunConfig.input_version.doctree  OperatorRunConfig.load_input.doctree  OperatorRunConfig.measure.doctree  OperatorRunConfig.store_output.doctree  RunConfig.__eq__.doctree  RunConfig.__init__.doctree  RunConfig.__repr__.doctree  RunConfig.cleanup.doctree  RunConfig.doctree  RunConfig.impl.doctree  RunConfig.iterations.doctree  (+21 more)
.doctrees/api/zebra/: brn.doctree  set_threads.doctree  thetav.doctree
.doctrees/dev/: operators.doctree  setup.doctree
.doctrees/usage/: config.doctree  custom_operator.doctree  evaluation.doctree  experiments.doctree  input.doctree  installation.doctree  introduction.doctree  script.doctree
.github/actions/: conda.yaml
.github/actions/conda/: action.yaml
.github/actions/conda_hash/: action.yaml
.github/workflows/: build.yaml  cd.yaml  ci.yaml  conda.yaml  deployment.yaml  documentation.yaml  packaging.yaml  products.yaml
_sources/: operators.rst.txt
_sources/dev/: operators.rst.txt
_sources/usage/: experiments.rst.txt
api/finch/: DaskRunConfig.__eq__.html  DaskRunConfig.__init__.html  DaskRunConfig.__repr__.html  DaskRunConfig.cleanup.html  DaskRunConfig.cluster_config.html  DaskRunConfig.construct_output.html  DaskRunConfig.create_report.html  DaskRunConfig.html  DaskRunConfig.measure.html  DaskRunConfig.setup.html  DaskRunConfig.workers.html  DaskRuntime.__eq__.html  DaskRuntime.__init__.html  DaskRuntime.__repr__.html  DaskRuntime.graph_construction.html  DaskRuntime.html  DaskRuntime.optimization.html  DaskRuntime.serialization.html  DefaultOperator.__call__.html  DefaultOperator.__class_getitem__.html  DefaultOperator.__subclasshook__.html  DefaultOperator.html  OperatorRunConfig.__eq__.html  OperatorRunConfig.__init__.html  OperatorRunConfig.__repr__.html  OperatorRunConfig.construct_output.html  OperatorRunConfig.html  OperatorRunConfig.impl.html  OperatorRunConfig.input_obj.html  OperatorRunConfig.input_version.html  OperatorRunConfig.load_input.html  OperatorRunConfig.measure.html  OperatorRunConfig.store_output.html  RunConfig.__eq__.html  RunConfig.__init__.html  RunConfig.__repr__.html  RunConfig.cleanup.html  RunConfig.html  RunConfig.impl.html  RunConfig.iterations.html  (+21 more)
api/finch/brn/: brn.html  (+7 more)
api/zebra/: brn.html  set_threads.html  thetav.html
conda/: build.sh  environment.yml  meta.yaml
config/: finch.ini  run.yaml
dev/: operators.html  setup.html
docs/sphinx/: .gitignore
docs/tex/: .gitignore  main.bcf  main.tex  packages.tex  refs.bib  scalability-blockers.tex  theoremsetup.tex
finch/: __init__.py  _util.py  config.py  constants.py  data.py  environment.py  evaluation.py  experiments.py  operators.py  scheduler.py  util.py
finch/brn/: __init__.py  impl.py  input.py  interface.py
finch/destagger/: __init__.py  impl.py  input.py  interface.py
finch/legate/: README.md  __init__.py  brn.py  core.py
scripts/: finch
src/finch/: __init__.py  _util.py  config.py  data.py  environment.py  evaluation.py  experiments.py  scheduler.py
src/zebra/: CMakeLists.txt  README.md  __init__.py  __init__.pyi  zebra.pyi
tests/: test_brn.py
usage/: config.html  custom_operator.html  evaluation.html  experiments.html  input.html  installation.html  introduction.html  script.html
zebra/: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
zebra/include/: util.h  wrapper.h
zebra/src/: CMakeLists.txt  bindings.cpp  brn.cpp
zebra/src/cebra/: CMakeLists.txt  brn.cpp  config.cpp
zebra/src/cebra/include/: brn.h  config.h  util.h
zebra/src/zebra/: CMakeLists.txt  bindings.cpp  wrapper.cpp
zebra/src/zebra/include/: wrapper.h
zebra/test/: CMakeLists.txt  brn_test.cpp  mock.cpp  profile.cpp  test_utils.cpp  test_utils.h
zebra/test/include/: mock.h  test_utils.h
(+2575 files in other folders)
