[build-system]
requires = [
  "setuptools>=42",
  "scikit-build",
  "cmake>=3.14",
  "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project]
name = "finch_mch"
version = "0.0.1a2"
authors = [
    { name="Tierry Hörmann", email="Tierry.Hoermann@meteoswiss.ch" },
]
description = "Library for running experiments on parallel dataprocessing operators"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX",
    "Topic :: Software Development"
]

[project.urls]
"Homepage" = "https://github.com/MeteoSwiss-APN/finch"
"Bug Tracker" = "https://github.com/MeteoSwiss-APN/finch/issues"