[build-system]
requires = [
  "setuptools>=42",
  "scikit-build",
  "cmake>=3.14",
  "pybind11",
  "ninja; platform_system!='Windows'",
]
build-backend = "setuptools.build_meta"

[project]
name = "finch_mch"
dynamic = ["version"]
authors = [{ name = "Tierry Hörmann", email = "Tierry.Hoermann@meteoswiss.ch" }]
description = "Library for running experiments on parallel dataprocessing operators"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: POSIX",
  "Topic :: Software Development",
]

[project.urls]
"Homepage" = "https://meteoswiss-apn.github.io/finch/"
"Bug Tracker" = "https://github.com/MeteoSwiss-APN/finch/issues"

[tool.setuptools.dynamic]
version = { file = "finch/data/VERSION" }
